fix sidebar alignment

--- a/src/views/styles/globals.css
+++ b/src/views/styles/globals.css
@@ -1,14 +1,30 @@
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+	html {
+		color-scheme: dark;
+	}
 }
 
 @media (max-width: 660px) {
-  .mobileHide {
-    display: none;
-  }
-  .mobileShow {
-    display: block;
-  }
+	.mobileHide {
+		display: none;
+	}
+	.mobileShow {
+		display: block;
+	}
+}
+::-webkit-scrollbar {
+	background-color: transparent;
+	width: 0.8vh;
+	height: 0.8vh;
+}
+* {
+	scrollbar-width: thin;
+	scrollbar-color: #4bffac;
+}
+*::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+	background-color: #4bffac;
+	border-radius: 20px;
 }
